# synapse

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  components.json  found_bugs.md  install-shortcut.cmd  package-lock.json  package.json  pyproject.toml  synapse.cmd  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai_os/: server.py
ai_os/static/: app.js  index.html  styles.css
benchmarks/bug-hunt-fixture/: README.md  answer-key.json  grade.py  topology-run.md
benchmarks/makeup-business-demo/: README.md  methodology.md
daemon/: packaged_daemon_main.py
daemon/synapse_accounts/: __init__.py  __main__.py  app.py  config.py  db.py
daemon/synapse_daemon/: __init__.py  __main__.py  about.py  agent_squads.py  ai_bundles.py  ai_cases.py  ai_context_memory.py  ai_factory.py  api_versions.py  app.py  assistant.py  audit.py  auth.py  benchmarks.py  boot_config.py  capture.py  chatgpt_import.py  cli.py  cli_http.py  coder_workspace.py  coordination.py  dependencies.py  discovery.py  errors.py  files_av.py  files_storage.py  git_worktrees.py  health.py  installed_pages.py  manifest_watcher.py  mcp_connector.py  mcp_servers.py  model_market.py  models.py  notifications.py  ollama_client.py  orphan_reconciler.py  personalities.py  process_log.py  process_manager.py  (+60 more)
daemon/tests/: conftest.py  test_about.py  test_agent_squads.py  test_ai_bundles_catalog.py  test_ai_cases.py  test_ai_context_memory.py  test_ai_factory.py  test_app.py  test_assistant.py  test_audit.py  test_auth.py  test_cli.py  (+78 more)
docs/: AUDIT-2026-06-16.md  IDEAS.md  MULTI-AI-WORKFLOW.md  ai-bundles-sample.json  api-changes.md  api-finds.md  marketplace-sample.json  mcp-servers-sample.json  models-sample.json  roadmap.json  security.md
electron/: main.ts  preload.ts  tsconfig.json
installer/: build-daemon.ps1  installer.nsh
mobile/: index.html
renderer/: App.tsx  index.html  main.tsx  styles.css
scripts/: benchmark-direct-run.py  coordination-preflight.ps1  dev.ps1  gen-icon.py  gen-types.ps1  inspect-electron.js  preflight.ps1  remote-recovery.ps1  version-bump.ps1
(+218 files in other folders)
