[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-daemon"
version = "0.1.36.7"
description = "Synapse execution layer — FastAPI daemon that owns all managed processes. By The WhatIf Company."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "The WhatIf Company", email = "justinwross32@gmail.com" }
]
keywords = ["synapse", "daemon", "fastapi", "process-manager", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Tools",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "psutil>=6.0.0,<7.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "websockets>=13.0,<14.0",
  "watchdog>=4.0.0,<7.0.0",
  "cryptography>=43.0.0,<46.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  'pywinpty>=2.0.0; sys_platform == "win32"',
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.9,<1.0.0",
]
build = [
  "pyinstaller>=6.10.0,<7.0.0",
]

[project.scripts]
synapsed = "synapse_daemon.__main__:main"
synapse  = "synapse_daemon.cli:main"
synapse-accounts = "synapse_accounts.__main__:main"

[project.urls]
Homepage = "https://github.com/jross32/synapse"
Repository = "https://github.com/jross32/synapse"

[tool.setuptools.packages.find]
where = ["daemon"]
include = ["synapse_daemon*", "synapse_accounts*"]

[tool.pytest.ini_options]
testpaths = ["daemon/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
